<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <include
        android:id="@+id/home_header"
        android:layout_alignParentTop="true"
        layout="@layout/common_header" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_header" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/phone_icon" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/phone_no_"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/call_detector_inspection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:background="@drawable/button_selector_contactus"
                        android:gravity="center"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/_1300_134_563"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/address_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/technical_support_"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/call_technical_support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:background="@drawable/button_selector_contactus"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/_61_431_723_904"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/address_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/call_technical_support_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:background="@drawable/button_selector_contactus"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/_61_431_431_615"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/address_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/general_support_"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/call_general_support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:background="@drawable/button_selector_contactus"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/_61_488_301_544"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/address_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:shadowColor="@android:color/white"
                        android:text="@string/fax_"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/address_text_size"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/fax_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:background="@drawable/button_selector_contactus"
                        android:gravity="center"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/_03_9523_0672"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/address_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/seperator_list" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/mail_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/help_icon" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/mail_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/button_selector_contactus"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/helpdesk_feedback"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/seperator_list"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/linkedin_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_linked" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/linkedin_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/contact_us_via_linkedin"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/seperator"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/twitterinspectionmangerimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/twee_icon" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/twitterinspectionmanger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/contact_us_via_twitter"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>