<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:id="@+id/top_linearlayout"
            android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
            android:layout_height="wrap_content" >
           
               <TextView
            android:id="@+id/edit_edit_txt"
            android:layout_width="@dimen/width_edit_screen_btn"
            android:layout_height="@dimen/height_edit_screen_btn"
            android:layout_gravity="center"
            android:layout_margin="5dp"
      
            android:background="@drawable/button_selector_im_menu_icon_signin"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/edit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/status_text_size"
            android:textStyle="bold" />
                <TextView
            android:id="@+id/edit_delete_txt"
            android:layout_width="@dimen/width_edit_screen_btn"
            android:layout_height="@dimen/height_edit_screen_btn"
           
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector_im_menu_icon_signin"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="@dimen/status_text_size"
            android:textStyle="bold" />
            
        </LinearLayout>

        

        <TextView
            android:id="@+id/edit_save_edit_txt"
            android:layout_width="@dimen/width_edit_screen_btn"
            android:layout_height="@dimen/height_edit_screen_btn"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/reorder_btn"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/status_text_size"
            android:textStyle="bold"
            android:visibility="gone" />

     

        <EditText
            android:id="@+id/edit_location_name_edit_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@id/edit_save_edit_txt"
            android:gravity="center_horizontal|left"
            android:padding="5dip"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/status_text_size"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            
            android:id="@+id/edit_location_name"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_edit_screen_btn"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@id/top_linearlayout"
            android:gravity="center_horizontal|left"
            android:padding="5dip"
            android:text="@string/location_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/status_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/top"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/seperator_list" />

</RelativeLayout>